--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Document</title>
+    <title>Property management System</title>
 </head>
 <body>
-    
+    <p></p>
 </body>
 </html>
