--- a/index.html
+++ b/index.html
@@ -11,6 +11,44 @@
     <title>Property management System</title>
 </head>
 <body>
-    <p></p>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3" id="left">
+                <div class="sticky-top">
+                    <div class="" id="profile-pic">
+                        <img src="https://toppng.com/public/uploads/preview/roger-berry-avatar-placeholder-11562991561rbrfzlng6h.png">
+                    </div>
+                    <hr>
+                    <div class="" id="legend">
+                        <p>call: 0723 346 169</p>
+                        <p>web: john@management.com</p>
+                        <button type="button" class="btn btn-lg btn-warning" id="contact">Contact</button>
+                    </div>
+                </div>
+            </div>
+            
+            <div class="col-md-8">
+                <div class="" id="about">
+                    <h2 class="">About John Doe</h2>
+                    <small>Where to find John doe</small>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
+                        dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
+                </div>
+                <hr>
+                <div class="" id="properties-owned">
+                    <h4>Recent properties by john Doe</h4>
+                    <div class="" id="recent-properties">
+                        <img src="img/img.jpg">
+                        <img src="img/img1.jpg">
+                        <img src="img/img2.jpg">
+                        <img src="img/img3.jpg">
+                        <img src="img/img4.jpg">
+                        <img src="img/img5.jpg">
+                        <img src="img/img6.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
