add breadcrumb + styles

--- a/profile.html
+++ b/profile.html
@@ -12,6 +12,15 @@
 </head>
 <body>
     <div class="container">
+        <div class="row" id="breadcrumb">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">Login</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Profile</li>
+                </ol>
+            </nav>
+        </div>
         <div class="row">
             <div class="col-md-3" id="left">
                 <div class="sticky-top">
