add an overlay jquery script

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="row" id="listings">
             <div class="col-md-4 m-1 card card-body">
                 <img class="img-fluid" id="img1" src="https://image.shutterstock.com/image-photo/modern-luxury-apartment-building-260nw-617466701.jpg" alt="apartment001">
-                <div class="text-center hover-text hidden" id="1">
+                <div class="text-center hover-text hidden" id="overlay1">
                     <p>Studio Apartment</p><br>
                     <p><i class="fa fa-map-marker"></i> Buru Buru Ph II</p><br>
                     <p>KShs 6,000/-</p>
@@ -54,7 +54,7 @@
             </div>
             <div class="col-md-4 m-1 card card-body">
                 <img class="img-fluid" id="img2" src="https://image.shutterstock.com/image-photo/house-building-city-construction-concept-260nw-189023420.jpg" alt="apartment002">
-                <div class="text-center hover-text hidden" id="2">
+                <div class="text-center hover-text hidden" id="overlay2">
                     <p>One bedroom </p><p> apartment</p><br>
                     <p><i class="fa fa-map-marker"></i> Umoja Innercore</p><br>
                     <p class="mb-4">KShs 5,000/-</p>
@@ -63,7 +63,7 @@
             </div>
             <div class="col-md-4 m-1 card card-body">
                 <img class="img-fluid" id="img3" src="https://image.shutterstock.com/image-photo/modern-apartment-open-living-room-260nw-676823536.jpg" alt="apartment003">
-                <div class="text-center hover-text hidden" id="3">
+                <div class="text-center hover-text hidden" id="overlay3">
                     <p>One bedroom </p><p> apartment</p><br>
                     <p><i class="fa fa-map-marker"></i> Kayole, Soweto</p><br>
                     <p class="mb-4">KShs 3,000/-</p>
