--- a/sign.html
+++ b/sign.html
@@ -23,7 +23,7 @@
             <input type="text" placeholder="password" name="password" class="input" required>
             <input type="text" placeholder="KRA code" name="code" class="input" required>
         </form>
-        <button type="submit" id="signupbtn1" onclick="alertA()">Sign Up</button>
+        <button type="submit" id="signupbtn1">Sign Up</button>
     </div>
 
     <div id="two">
