add an add listings page

--- a/profile2.html
+++ b/profile2.html
@@ -19,7 +19,6 @@
             </div>
             <div>
                 <a class="nav-item m-2" href="index.html">Home</a>
-                <a class="nav-item m-2"  href="#">Listings</a>
                 <a class="nav-item m-2"  href="#"> <b>Sign Up </b></a>
                 <a class="nav-item m-2"  href="#">Login </a> 
             </div>
@@ -38,14 +37,14 @@
                 <div class="sticky-top">
                     <h5><strong>Manage Listings</strong></h5>
                     <div class="" id="legend">
-                        <li><a href="">Add listing</a></li>
-                        <li><a href="">Bookmarked listings</a></li>
-                        <li><a href="">My listings</a></li>
+                        <a class="nav-item m-2" href="">Add listing</a>
+                        <a class="nav-item m-2" href="">Bookmarked listings</a>
+                        <a class="nav-item m-2" href="">My listings</a>
                     </div>
                     <h5><strong>Manage Account</strong></h5>
                     <div class="" id="account">
-                        <li><a href="">My profile</a></li>
-                        <li><a href="">Change Password</a></li>
+                        <a class="nav-item m-2" href="">My profile</a>
+                        <a class="nav-item m-2" href="">Change Password</a>
                     </div>
                 </div>
             </div>
