--- a/listing.html
+++ b/listing.html
@@ -120,11 +120,49 @@
                         </div>
                         <h5 class="header">Additional features</h5>
                         <hr>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Garden
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck2">
+                            <label class="form-check-label" for="defaultCheck2">
+                                Gym
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Internet
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Swimming pool
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                            <label class="form-check-label" for="defaultCheck1">
+                                Parking
+                            </label>
+                        </div>
+                        <hr>
                         <div class="form-group row">
-                            <input type="checkbox" >
+                            <div class="col">
+                                <small>Property Description</small>
+                                <textarea type="text" class="form-control form-control-lg" rows="7" placeholder=""></textarea>
+                            </div>
                         </div>
                         <div class="text-center">
                             <button type="button" class="btn btn-lg btn-warning" id="btn-profile">Save</button>
+                        </div>
+                        <h5 class="header">Upload photos</h5>
+                        <div class="upload-drop-zone" id="drop-zone">
+                            Just drag and drop files here
                         </div>
                     </form>
                 </div>
