add place holders and font to contact page

--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,7 @@
 </head>
 <body> 
   
-      <div id="contacts">CONTACT US
+     <h3 class="text-center m-4" style="font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-size:24px; font-weight:800;">Contact Us:</h3>
 
 <!-- Section: Contact v.3 -->
 <section class="contact-section my-5">
@@ -30,7 +30,7 @@
         <div class="card-body form">
 
           <!-- Header -->
-          <h3 class="mt-4"><i class="fas fa-envelope"></i></i>Write to us:</h3>
+          <h3 class="mt-4"><i class="fa fa-envelope"></i></i>  Write to us:</h3>
 
           <!-- Grid row -->
           <div class="row">
@@ -38,8 +38,8 @@
             <!-- Grid column -->
             <div class="col-md-4">
               <div class="md-form mb-0">
-                <input type="text" id="name" class="form-control">
-                <label for="form-contact-name" class="">Your name</label>
+                <input type="text" id="name" class="form-control" placeholder="Your Name...">
+                <label for="form-contact-name" class=""></label>
               </div>
             </div>
             <!-- Grid column -->
@@ -47,8 +47,8 @@
             <!-- Grid column -->
             <div class="col-md-4">
               <div class="md-form mb-0">
-                <input type="text" id="email" class="form-control">
-                <label for="form-contact-email" class="">Your email</label>
+                <input type="text" id="email" class="form-control" placeholder="Your Email...">
+                <label for="form-contact-email" class=""></label>
               </div>
             </div>
             <!-- Grid column -->
@@ -62,8 +62,8 @@
             <!-- Grid column -->
             <div class="col-md-4">
               <div class="md-form mb-0">
-                <input type="number" id="phone" class="form-control">
-                <label for="form-contact-phone" class="">Your phone</label>
+                <input type="number" id="phone" class="form-control" placeholder="Your Phone...">
+                <label for="form-contact-phone" class=""></label>
               </div>
             </div>
             <!-- Grid column -->
@@ -71,8 +71,8 @@
             <!-- Grid column -->
             <div class="col-md-4">
               <div class="md-form mb-0">
-                <input type="text" id="form-contact-company" class="form-control">
-                <label for="form-contact-company" class="">Your company</label>
+                <input type="text" id="form-contact-company" class="form-control" placeholder="Your Company...">
+                <label for="form-contact-company" class=""></label>
               </div>
             </div>
             <!-- Grid column -->
@@ -86,12 +86,12 @@
             <!-- Grid column -->
             <div class="col-md-8">
               <div class="md-form mb-0">
-                <textarea id="msg" class="form-control md-textarea" rows="3"></textarea>
-                <label for="form-contact-message">Your message</label>
+                <textarea id="msg" class="form-control md-textarea" rows="3" placeholder="Your message..."></textarea>
+                <label for="form-contact-message"></label>
                 <a class="btn-floating btn-lg blue">
-                  <i class="far fa-paper-plane"></i>
+                  
                 </a>
-                <button onclick="validate();">Submit</button>
+                <button class="btn btn-dark m-4" onclick="validate();"><i class="fa fa-paper-plane"></i>  Submit</button>
               </div>
             </div>
             <!-- Grid column -->
@@ -117,27 +117,27 @@
                          <p>Nairobi Kenya</p>
             </li>
             <li>
-              <p><i class="fas fa-phone pr-2"></i>+254712345678</p>
+              <p><i class="fa fa-phone pr-2"></i>+254712345678</p>
             </li>
             <li>
-              <p><i class="fas fa-envelope pr-2"></i>info@rental systems.com</p>
+              <p><i class="fa fa-envelope pr-2"></i>info@rental systems.com</p>
             </li>
           </ul>
           <hr class="hr-light my-4">
           <ul class="list-inline text-center list-unstyled">
             <li class="list-inline-item">
               <a class="p-2 fa-lg tw-ic">
-                <i class="fab fa-twitter"></i>
+                <i class="fa fa-twitter"></i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="p-2 fa-lg li-ic">
-                <i class="fab fa-linkedin-in"> </i>
+                <i class="fa fa-linkedin-in"> </i>
               </a>
             </li>
             <li class="list-inline-item">
               <a class="p-2 fa-lg ins-ic">
-                <i class="fab fa-instagram"> </i>
+                <i class="fa fa-instagram"> </i>
               </a>
             </li>
           </ul>
