--- a/profile2.html
+++ b/profile2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+
     <link href="styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
@@ -19,8 +20,8 @@
             </div>
             <div>
                 <a class="nav-item m-2" href="index.html">Home</a>
-                <a class="nav-item m-2"  href="#">Listings</a>
-                <a class="nav-item m-2"  href="#"> <b>Sign Up </b></a>
+                <a class="nav-item m-2"  href="listings .html">Listings</a>
+                <a class="nav-item m-2"  href="sign.html"> <b>Sign Up </b></a>
                 <a class="nav-item m-2"  href="#">Login </a> 
             </div>
         </nav>
