--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Property management System</title>
 </head>
 <body>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="form-group row">
                         <div class="col">
-                            <input type="email" class="form-control form-control-lg" placeholder="email" required>
+                            <input type="email" class="form-control form-control-lg" placeholder="email" id="email" required>
                         </div>
                     </div>
                     <div class="radios text-center">
@@ -110,16 +110,16 @@
                     </div>
                     <div class="form-group row">
                         <div class="col">
-                            <input type="password" class="form-control form-control-lg" placeholder="preferred password" required>
+                            <input type="password" class="form-control form-control-lg" placeholder="preferred password" id="password1" required>
                         </div>
                         <div class="col">
-                            <input type="password" class="form-control form-control-lg" placeholder="repeat password" required>
+                            <input type="password" class="form-control form-control-lg" placeholder="repeat password" id="password2" required>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-success">Save changes</button>
+            <div class="modal-footer text-center">
+                <button type="button" class="btn btn-primary" id="savebtn" data-dismiss="modal">Save changes</button>
             </div>
             </div>
         </div>
