remove unnecessary code in index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
                 <span aria-hidden="true">&times;</span>
                 </button>
             </div>
-            <div class="modal-body text-center">
+            <form action="profile.html">
+            <div class="modal-body text-center" >
                 <div class="signup" id="">
                     <div class="form-group row">
                         <div class="col">
@@ -156,8 +157,9 @@
                     </div>
                 </div>
             </div>
+        </form>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success">Save changes</button>
+                <button type="button" class="btn btn-success" data-dismiss="modal">Login</button>
             </div>
             </div>
         </div>
