--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 </div>
             </div>
             <div class="modal-footer text-center">
-                <button type="button" class="btn btn-primary" id="savebtn" data-dismiss="modal">Save changes</button>
+                <a href="profile.html"><button type="button" class="btn btn-primary" id="savebtn" data-dismiss="modal">Sign Up</button></a>
             </div>
             </div>
         </div>
