--- a/listing.html
+++ b/listing.html
@@ -19,8 +19,8 @@
             </div>
             <div>
                 <a class="nav-item m-2" href="index.html">Home</a>
-                <a class="nav-item m-2"  href="#"> <b>Sign Up </b></a>
-                <a class="nav-item m-2"  href="#">Login </a> 
+                <a class="nav-item m-2"  href="profile.html"> <b>My profile </b></a>            
+
             </div>
         </nav>
         <div class="row" id="breadcrumb">
