--- a/profile.html
+++ b/profile.html
@@ -18,16 +18,16 @@
                 <p style="font-size:8px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">...management on lock</p>
             </div>
             <div>
-                <a class="nav-item m-2" href="#">Home</a>
-                <a class="nav-item m-2"  href="#"> <b>Sign Up </b></a>
-                <a class="nav-item m-2"  href="#">Login </a> 
+                <a class="nav-item m-2" href="index.html">Home</a>
+                
+                <a class="nav-item m-2"  href="#"><b>Add a listing </b></a> 
             </div>
         </nav>
         <div class="row" id="breadcrumb">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Login</a></li>
+                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    
                     <li class="breadcrumb-item active" aria-current="page">Profile</li>
                 </ol>
             </nav>
@@ -42,7 +42,7 @@
                     <div class="" id="legend">
                         <p>call: 0723 346 169</p>
                         <p>web: john@management.com</p>
-                        <button type="button" class="btn btn-lg btn-warning" id="contact">Contact</button>
+                        <button type="button" class="btn btn-lg btn-warning" id="contact">Contact Me</button>
                     </div>
                 </div>
             </div>
