updated js files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Khula&display=swap" rel="stylesheet">
-    <script src="js/jquery-3.4.1.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
    
     <title>Property management System</title>
@@ -49,31 +49,31 @@
     <section class="container recents" style="margin-top:100px">
         <div class="row" id="listings">
             <div class="col-md-4 m-1 card card-body">
-                <img class="img-fluid" id="img1" src="https://image.shutterstock.com/image-photo/modern-luxury-apartment-building-260nw-617466701.jpg" alt="apartment001">
+                <img class="img-fluid" id="img1" src="https://crystalvaluers.com/assets/WPL/43/thimg_Exterior-view_autox600.JPG" alt="apartment001">
                 <div class="text-center hover-text hidden" id="overlay1">
-                    <p>Studio Apartment</p><br>
-                    <p><i class="fa fa-map-marker"></i> Buru Buru Ph II</p><br>
-                    <p>KShs 6,000/-</p>
-                    <a class="mt-4" href="#">Read More.</a>
+                    <p>3 br Bungalow</p><br>
+                    <p><i class="fa fa-map-marker"></i> Kawangware</p><br>
+                    <p>KShs 25,000/-</p>                    
                 </div>
+                <a class="btn btn-primary mt-4" href="single-view.html">Read More.</a>
             </div>
             <div class="col-md-4 m-1 card card-body" id="test1">
                 <img class="img-fluid" id="img2" src="https://image.shutterstock.com/image-photo/house-building-city-construction-concept-260nw-189023420.jpg" alt="apartment002">
                 <div class="text-center hover-text hidden" id="overlay2">
                     <p>One bedroom </p><p> apartment</p><br>
                     <p><i class="fa fa-map-marker"></i> Umoja Innercore</p><br>
-                    <p class="mb-4">KShs 5,000/-</p>
-                    <a href="#">Read More.</a>
+                    <p class="mb-4">KShs 5,000/-</p>                    
                 </div>
+                <a class="btn btn-primary mt-4" href="#">Read More.</a>
             </div>
             <div class="col-md-4 m-1 card card-body">
                 <img class="img-fluid" id="img3" src="https://image.shutterstock.com/image-photo/modern-apartment-open-living-room-260nw-676823536.jpg" alt="apartment003">
                 <div class="text-center hover-text hidden" id="overlay3">
                     <p>One bedroom </p><p> apartment</p><br>
                     <p><i class="fa fa-map-marker"></i> Kayole, Soweto</p><br>
-                    <p class="mb-4">KShs 3,000/-</p>
-                    <a href="#">Read More.</a>
+                    <p class="mb-4">KShs 3,000/-</p>                    
                 </div>
+                <a class="btn btn-primary mt-4" href="#">Read More.</a>
             </div>
         </div>
     </section>
@@ -146,7 +146,7 @@
                 <div class="signup" id="">
                     <div class="form-group row">
                         <div class="col">
-                            <input type="text" class="form-control form-control-lg" placeholder="first name" required>
+                            <input type="text" class="form-control form-control-lg" placeholder="user name" required>
                         </div>
                     </div>
                     <div class="form-group row">
