--- a/single-view.html
+++ b/single-view.html
@@ -18,9 +18,9 @@
                 <p style="font-size:8px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;">...management on lock</p>
             </div>
             <div>
-                <a class="nav-item m-2" href="#">Home</a>
-                <a class="nav-item m-2"  href="#"> <b>Sign Up </b></a>
-                <a class="nav-item m-2"  href="#">Login </a> 
+                <a class="nav-item m-2" href="index.html">Home</a>
+                <a class="nav-item m-2"  href="contacts.html"> <b>Contact Us </b></a>
+                
             </div>
         </nav>
         <div class="row" id="breadcrumb">
