add the results page

--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
             <div>
                 <a class="nav-item m-2" href="index.html">Home</a>
                 
-                <a class="nav-item m-2"  href="#"><b>Add a listing </b></a> 
+                <a class="nav-item m-2"  href="listing.html"><b>Add a listing </b></a> 
             </div>
         </nav>
         <div class="row" id="breadcrumb">
@@ -36,7 +36,7 @@
             <div class="col-md-3" id="left">
                 <div class="sticky-top">
                     <div class="" id="profile-pic">
-                        <img src="https://toppng.com/public/uploads/preview/roger-berry-avatar-placeholder-11562991561rbrfzlng6h.png">
+                        <img src="https://image.slidesharecdn.com/random-people-preview-160918064958/95/random-people-6-638.jpg?cb=1474788136">
                     </div>
                     <hr>
                     <div class="" id="legend">
