--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="form-group">
             <input class="form-control" type="text" value="" placeholder="Search for a Property">
         </div>
-        <button class="btn btn-primary">Search</button>
+        <button class="btn btn-primary" id="search">Search</button>
     </div>
 
     <h2 class="text-center mt-4">Recent Rental Properties</h2>
@@ -144,7 +144,7 @@
                 </button>
             </div>
             <div class="modal-body text-center" >
-                <form>
+                <form action="profile.html">
                     <div class="signup" id="">
                         <div class="form-group row">
                             <div class="col">
@@ -161,7 +161,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" data-dismiss="modal">Login</button>
+                <button type="button" class="btn btn-success" data-dismiss="modal" id="login-btn">Login</button>
             </div>
             </div>
         </div>
