change john doe to wendy orengo

--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,7 @@
             
             <div class="col-md-8">
                 <div class="" id="about">
-                    <h2 class="">About John Doe</h2>
+                    <h2 class="">About Wendy Orengo</h2>
                     <small>Where to find John doe</small>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
