update john doe to wendy orengo

--- a/profile.html
+++ b/profile.html
@@ -50,13 +50,13 @@
             <div class="col-md-8">
                 <div class="" id="about">
                     <h2 class="">About Wendy Orengo</h2>
-                    <small>Where to find John doe</small>
+                    <small>Where to find Wendy Orengo</small>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard 
                         dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it</p>
                 </div>
                 <hr>
                 <div class="" id="properties-owned">
-                    <h4>Recent properties by john Doe</h4>
+                    <h4>Recent properties by Wendy Orengo</h4>
                     <div class="" id="recent-properties">
                         <img src="img/img.jpg">
                         <img src="img/img1.jpg">
